2007-10-25  Paolo Borelli  <pborelli@katamail.com>

	* src/nautilus-window-manage-view.c (location_has_really_changed):
	Fix a warning when switching view.

2007-10-25  Paolo Borelli  <pborelli@katamail.com>

	* src/nautilus-application.c:
	* src/nautilus-property-browser.c:
	* src/nautilus-shell.c:

	Do not use EelStringList.

2007-10-24  Paolo Borelli  <pborelli@katamail.com>

	* src/nautilus-file-management-properties.c:
	remove eel_string_list (ab)use.

2007-10-24  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.[ch]:
        * libnautilus-private/nautilus-vfs-file.c:
	Pass GMountOperation instead of parent to mount.
	Nothing for unmount/eject
	
        * src/file-manager/fm-directory-view.c:
	Pass in a mount operation for mount.
	Disable timeout when mount operation is active

2007-10-24  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file.c:
	Use g_utf8_collate, not eel_strcoll.

2007-10-24  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-canvas-item.c:
        * test/test.c:
	Update for eel changes

2007-10-23  Alexander Larsson  <alexl@redhat.com>

        * configure.in:
        * libnautilus-private/nautilus-icon-canvas-item.[ch]:
        * libnautilus-private/nautilus-icon-container.c:
        * libnautilus-private/nautilus-icon-dnd.c:
        * libnautilus-private/nautilus-icon-private.h:
        * test/test.c:
	Remove libart dependency, use eel rect and point types

2007-10-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-program-choosing.c:
        (nautilus_launch_application_from_command):
	Use gdk_spawn instead of eel

2007-10-23  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-dnd.c:
        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-program-choosing.c:
        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-properties-window.c: